Added ATS exception for Compass (still using TLS 1.0)

--- a/ios/North/Info.plist
+++ b/ios/North/Info.plist
@@ -48,6 +48,13 @@
 				<key>NSTemporaryExceptionAllowsInsecureHTTPLoads</key>
 				<true/>
 			</dict>
+			<key>jdlf.com.au</key>
+			<dict>
+				<key>NSIncludesSubdomains</key>
+				<true/>
+				<key>NSThirdPartyExceptionMinimumTLSVersion</key>
+				<string>TLSv1.0</string>
+			</dict>
 		</dict>
 	</dict>
 </dict>
