--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "apsl-react-native-button": "^2.5.0",
     "react": "15.2.0",
     "react-native": "0.28.0",
+    "react-native-material-design": "^0.3.6",
     "react-native-scrollable-tab-view": "^0.5.2",
     "react-native-vector-icons": "^2.0.3",
     "react-native-ya-navigator": "^0.6.10"
