--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "start": "node node_modules/react-native/local-cli/cli.js start"
   },
   "dependencies": {
-    "react": "15.2.0",
-    "react-native": "0.28.0",
+    "react": "^15.3.2",
+    "react-native": "^0.35.0",
     "react-native-material-design": "^0.3.6",
     "react-native-scrollable-tab-view": "^0.5.2",
     "react-native-vector-icons": "^2.0.3",
