--- a/ios/North/Info.plist
+++ b/ios/North/Info.plist
@@ -47,6 +47,13 @@
 				<key>NSTemporaryExceptionAllowsInsecureHTTPLoads</key>
 				<true/>
 			</dict>
+			<key>jdlf.com.au</key>
+      <dict>
+        <key>NSIncludesSubdomains</key>
+        <true/>
+        <key>NSThirdPartyExceptionMinimumTLSVersion</key>
+        <string>TLSv1.0</string>
+      </dict>
 		</dict>
 	</dict>
 	<key>UIAppFonts</key>
